# xbarray

./: LICENSE  README.md  pyproject.toml
array_api_typing/: README.md  __init__.py  pyproject.toml
array_api_typing/array_api_typing/: __init__.py
array_api_typing/array_api_typing/typing_2024_12/: __init__.py  _api_fft_typing.py  _api_return_typing.py
array_api_typing/array_api_typing/typing_compat/: _api_typing.py
array_api_typing/array_api_typing/typing_extra/: __init__.py  _at.py
array_api_typing/typing_2024_12/: __init__.py  _api_constant.py  _api_linalg_typing.py  _api_return_typing.py  _api_typing.py  _array_typing.py
array_api_typing/typing_compat/: __init__.py  _array_typing.py
array_api_typing/typing_extra/: __init__.py  _api_typing.py  _at.py
xarray/: pyproject.toml
xarray/base/: base.py
xarray/common/: implementations.py
xarray/jax/: __init__.py  _extra.py
xarray/numpy/: __init__.py  _extra.py  _typing.py  random.py  random_backend.py
xarray/pytorch/: __init__.py  _extra.py  _typing.py
xarray/xarray/base/: __init__.py  base.py
xbarray/: __init__.py  jax.py  numpy.py  pytorch.py
xbarray/_src/serialization/: __init__.py  serialization_map.py
xbarray/backends/: _cls_base.py  jax.py  numpy.py  pytorch.py
xbarray/base/: base.py
xbarray/cls_impl/: cls_base.py
xbarray/common/: implementations.py
xbarray/jax/: __init__.py  _extra.py  _typing.py  random.py
xbarray/numpy/: _extra.py
xbarray/pytorch/: __init__.py  _extra.py  random.py
xbarray/transformations/: rotation_conversions.py
(+19 files in other folders)
