[project]
name = "xbarray"
description = "Cross-backend Python array library based on the Array API Standard."
version = "0.0.1a6"
requires-python = ">= 3.10"
dependencies = [
    "typing_extensions>=4.5",
    "array_api_compat",
    "array_api_extra",
    "numpy",
]

[project.optional-dependencies]
torch = [
    "torch"
]
jax = [
    "jax"
]

[build-system]
requires = ["setuptools"]

[tool.setuptools.packages.find]
include = ["*"]
exclude = ["training*", "tests*"]